<resources>
    <string name="app_name">Project_App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">logout</string>
    <string name="platzhalter">******</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Dont have an Account?</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="signup">SignUp</string>
    <string name="todo">TODO</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="auch_wenn_der_kraftbereich_in_fitnessstudios_heutzutage_l_ngst_nicht_mehr_nur_m_nnerterritorium_ist_sind_muskelaufbau_und_krafttraining_f_r_frauen_nach_wie_vor_abschreckende_themen_die_angst_vor_gewaltig_maskulinen_muskelbergen_und_dem_verlust_der_weiblichen_kurven_ist_allgegenw_rtig_und_hemmt_besonders_abnehmwillige_vor_dem_einsatz_von_krafttraining_und_schweren_gewichten_insbesondere_wenn_es_darum_geht_ein_paar_kilos_zu_verlieren_oder_k_rperfett_abzubauen_ist_krafttraining_der_schl_ssel_zu_langfristigem_erfolg_zahlreiche_stars_aus_der_film_musik_und_sportszene_machen_es_vor_sie_posten_ihre_trainingserfolge_oder_lieblings_bungen_in_den_sozialen_netzwerken_mit_dem_kompakten_trainingscoach_wollen_wir_frauen_helfen_die_angst_vor_gewichten_zu_vergessen_und_das_krafttraining_f_r_sich_zu_entdecken_denn_auf_dem_weg_zur_traumfigur_ist_krafttraining_ein_unverzichtbarer_partner_kannst_du_mit_krafttraining_abnehmen_als_frau_first_things_first_um_abzunehmen_brauchst_du_ein_kaloriendefizit_mit_deinem_training_unterst_tzt_du_den_abnehmprozess_indem_du_deinen_kalorienverbrauch_erh_hst_und_f_r_den_muskelerhalt_sorgst_wenn_du_zus_tzlich_krafttraining_bungen_machst_signalisierst_du_deinem_k_rper_dass_du_deine_muskeln_noch_brauchst_das_h_lt_ihn_davon_ab_sie_abzubauen_folge_du_nimmst_ab_und_hast_einen_wohlgeformten_k_rper"><![CDATA[Auch wenn der Kraftbereich in Fitnessstudios heutzutage längst nicht mehr nur Männerterritorium ist, sind Muskelaufbau und Krafttraining für Frauen nach wie vor abschreckende Themen. Die Angst vor gewaltig maskulinen Muskelbergen und dem Verlust der weiblichen Kurven ist allgegenwärtig und hemmt besonders Abnehmwillige vor dem Einsatz von Krafttraining und schweren Gewichten. Insbesondere wenn es darum geht ein paar Kilos zu verlieren, oder Körperfett abzubauen, ist Krafttraining der Schlüssel zu langfristigem Erfolg. Zahlreiche Stars aus der Film-, Musik- und Sportszene machen es vor. Sie posten ihre Trainingserfolge oder Lieblingsübungen in den sozialen Netzwerken. Mit dem kompakten Trainingscoach wollen wir Frauen helfen, die Angst vor Gewichten zu vergessen und das Krafttraining für sich zu entdecken. Denn: Auf dem Weg zur Traumfigur ist Krafttraining ein unverzichtbarer Partner. Kannst du mit Krafttraining abnehmen als Frau? First things first: Um abzunehmen brauchst du ein Kaloriendefizit. Mit deinem Training unterstützt du den Abnehmprozess, indem du deinen Kalorienverbrauch erhöhst und für den Muskelerhalt sorgst. Wenn du zusätzlich Krafttraining Übungen machst, signalisierst du deinem Körper, dass du deine Muskeln noch brauchst. Das hält ihn davon ab, sie abzubauen. Folge: Du nimmst ab und hast einen wohlgeformten Körper.  ]]></string>
    <string name="die_folgenden_informationen_verschaffen_ihnen_einen_ersten_eindruck_von_unserer_abteilung_gerne_k_nnen_sie_uns_auch_anschreiben_anrufen_oder_einfach_vorbeischauen_die_tennisanlage_befindet_sich_auf_einem_gro_em_sportgel_nde_in_wilmersdorf_im_bereich_forckenbeckstra_e_cunostra_e_und_fritz_wildung_stra_e_der_eingang_zur_anlage_und_zum_clubhaus_liegt_in_der_cunostra_e_28_zwischen_der_ruhemann_sporthalle_und_der_tennishalle_wir_w_nschen_uns_allerdings_nicht_nur_neue_mitglieder_die_ihre_beitr_ge_p_nktlich_bezahlen_unser_interesse_gilt_vor_allem_jenen_die_auch_aktiv_am_clubleben_teilnehmen_m_chten_sollte_beides_auf_sie_zutreffen_freuen_wir_uns_ber_ihre_bewerbung_per_brief_oder_e_mail_an_den_bsc_oder_einen_der_ansprechpartner">Die folgenden Informationen verschaffen Ihnen einen ersten Eindruck von unserer Abteilung. Gerne können Sie uns auch anschreiben, anrufen oder einfach vorbeischauen. Die Tennisanlage befindet sich auf einem großem Sportgelände in Wilmersdorf im Bereich Forckenbeckstraße, Cunostraße und Fritz-Wildung-Straße. Der Eingang zur Anlage und zum Clubhaus liegt in der Cunostraße 28 zwischen der Ruhemann-Sporthalle und der Tennishalle. Wir wünschen uns allerdings nicht nur neue Mitglieder, die ihre Beiträge pünktlich bezahlen. Unser Interesse gilt vor allem jenen, die auch aktiv am Clubleben teilnehmen möchten. Sollte beides auf Sie zutreffen, freuen wir uns über Ihre Bewerbung per Brief oder E-Mail an den BSC oder einen der Ansprechpartner.</string>
    <string name="fitness_studios_in_famili_rer_umgebung_sind_zu_meist_die_klassiker_unter_den_gyms_solcher_studios_sind_bis_heute_noch_meist_verbreitet_und_nicht_selten_gerade_in_l_ndichen_regionen_angesiedelt_diese_form_der_fitnessstudios_hat_was_nostalgisches_und_erinnert_oft_an_die_sp_ten_80er_fr_hen_90er_jahre_hier_kennen_sich_die_mitglieder_untereinander_und_sitzen_gerne_mal_nach_dem_sport_auf_einen_gem_tlichen_plausch_zusammen_die_fachexpertiese_der_trainer_variert_extrem_vom_basiswissen_rehasport_bis_zum_allumfassenden_fachmann_und_wettkampfvorbereiter_kann_hier_alles_m_glich_sein">Fitness Studios in familiärer Umgebung, sind zu Meist die Klassiker unter den Gyms. Solcher Studios sind bis heute noch meist verbreitet und nicht selten gerade in ländichen Regionen angesiedelt. Diese Form der Fitnessstudios hat was nostalgisches und erinnert oft an die späten 80er/ frühen 90er Jahre. Hier kennen sich die Mitglieder untereinander und sitzen gerne mal nach dem Sport auf einen gemütlichen Plausch zusammen. Die Fachexpertiese der Trainer variert extrem – vom Basiswissen Rehasport bis zum allumfassenden Fachmann und Wettkampfvorbereiter kann hier alles möglich sein.</string>
</resources>