<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_backround2"
        tools:context=".LoginFragment">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.764"
            app:srcCompat="@drawable/frame_11" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="Login"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gymguide_full_logo" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:alpha="0.85"
            android:background="@drawable/input_bg"
            android:backgroundTint="#FFFFFF"
            android:drawableStart="@drawable/ic_baseline_security_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/platzhalter"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:textColor="#4E4E4E"
            android:textColorHint="#4E4E4E"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputEmail"
            tools:ignore="TextFields,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginTop="80dp"
            android:alpha="0.85"
            android:background="@drawable/input_bg"
            android:backgroundTint="#FFFFFF"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:textColor="#4E4E4E"
            android:textColorHint="#4E4E4E"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/inputPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/inputPassword"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            tools:ignore="TextFields,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/forgot_password"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/inputPassword"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_bg"
            android:backgroundTint="#F89500"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@+id/inputPassword"
            app:layout_constraintStart_toStartOf="@+id/inputPassword"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassword"
            tools:ignore="TouchTargetSizeCheck" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="352dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/btnlogin"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="@+id/btnlogin"
            app:layout_constraintTop_toBottomOf="@+id/btnlogin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_an_account"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/signup"
                android:textColor="#F89500"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btnGoogle"
            android:layout_width="164dp"
            android:layout_height="46dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:srcCompat="@drawable/google"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/btnfacebook"
            android:layout_width="164dp"
            android:layout_height="46dp"
            android:layout_marginEnd="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/btnGoogle"
            app:srcCompat="@drawable/facebook"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/btnApple"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnGoogle"
            app:srcCompat="@drawable/apple"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>